tests/snapshots/gateway/studio/repo_gateway_missing_kind_error.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "code": "MISSING_KIND",
  "message": "`kind` is required"
}
