tests/snapshots/gateway/studio/repo_gateway_missing_node_id_error.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "code": "MISSING_NODE_ID",
  "message": "`node_id` is required"
}
