tests/snapshots/gateway/studio/repo_gateway_missing_query_error.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "code": "MISSING_QUERY",
  "message": "`query` is required"
}
